Fix text overflowing slanted background when the background gets too narrow
Changes:
- horizontal padding was added to the text equal to the same size of the slanted background's clip path
- display: flex was added to the text so when long words that take up one line overflow the whole container, the text is still centered and doesn't overflow to the right

--- a/client/src/pages/homepage/homepage.styles.scss
+++ b/client/src/pages/homepage/homepage.styles.scss
@@ -38,6 +38,14 @@ $left-width: 55vw;
         width: $left-width;
         animation: slideRight .5s ease-out;
 
+        & > * {
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            padding: 0 15%;
+            box-sizing: border-box;
+        }
+
         .text {
             font-size: 6rem;
             letter-spacing: .5rem;
